<resources>
    <string name="app_name">Consumer</string>
    <string name="welcome_to">Welcome To</string>
    <string name="title_main">QR PAYMENT WALLET</string>
    <string name="history">History</string>
    <string name="loading">Loading</string>
    <string name="gen_qr">GEN QR</string>
    <string name="scan_qr">SCAN QR</string>

    <!-- add -->
    <string name="card_name">Card Name</string>
    <string name="my_name">My Name</string>
    <string name="card_no">Card No</string>
    <string name="jpy">JPY</string>
    <string name="last_login">Last Login</string>
    <string name="add_card">ADD CARD</string>
    <string name="select_card_type">Select Card Type</string>
    <string name="smcc">SMCC</string>
    <string name="jcb_premo">JCB PREMO</string>
    <string name="mizuho">MIZUHO</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="add">ADD</string>
    <string name="authentication">Authentication</string>
    <string name="add_card_success">Add card success</string>
    <string name="ok">OK</string>
    <string name="user_has_add_card_fail_completely">User has add card fail Completely</string>
    <string name="please_try_to_add_card_again">Please try to add card again.</string>
    <string name="count_down">Count Down</string>
    <string name="bar_code">Bar Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="transaction_complete">Transaction complete !</string>
    <string name="consumer_has_scan_qr_code_completely">Consumer has scan QR code completely.</string>
    <string name="please_wait_for_processing">Please wait for processing</string>
    <string name="error_message">ERROR Message</string>
    <string name="remove_card">REMOVE CARD</string>
    <string name="card_type">Card Type</string>
    <string name="date">Date</string>
    <string name="available_balance">Available Balance</string>
    <string name="authentication_no">Authentication No.</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="payment_detail">PAYMENT DETAIL</string>
    <string name="payment_type">Payment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="card_number">Card Number</string>
    <string name="time">Time</string>
    <string name="totla_amount">Total amount</string>
</resources>
