<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/defaultDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dialogMessage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/user_has_add_card_fail_completely" />

        <TextView
            android:id="@+id/dialogMessage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_try_to_add_card_again" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:background="@drawable/shap_round_rect_button_add"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:background="@drawable/shape_round_rect_button_green"
            android:text="@string/no"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_round_rect_button_red"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgLoading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_loading"
            android:visibility="gone" />

        <com.promptnow.qrpayment.consumer.view.SpinView
            android:layout_marginTop="16dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>